# membrane_template

./: .gitignore  LICENSE  README.md
dart_example/: .metadata  ffigen.yaml  pubspec.yaml
dart_example/lib/: time.dart
dart_example/lib/src/: ffi_bindings.dart  loader.dart  membrane_types.h
dart_example/lib/src/time/: time.dart  time.h  trait_helpers.dart
dart_example/macos/: dart_example.podspec
dart_example/macos/Classes/: DartExamplePlugin.swift  membrane_types.h
flutter_example/: .metadata  pubspec.yaml
flutter_example/lib/: main.dart
rust_example/: Cargo.toml
rust_example/src/: generator.rs  lib.rs
