[package]
description = "A ready-to-go template repository to get you up and running easily with Membrane"
edition = "2021"
homepage = "https://github.com/jerel/membrane"
license = "Apache-2.0"
name = "rust_example"
repository = "https://github.com/jerel/membrane_template"
version = "0.1.0"

[[bin]]
name = "generator"
path = "src/generator.rs"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
async-stream = "0.3"
futures = "0.3"
membrane = {git = "https://github.com/jerel/membrane", rev = "0ad0fc8907c93e087e01598260bee1863f5adc02"}
once_cell = "1.8"
tokio = {version = "1", features = ["rt-multi-thread", "time"]}

[profile.release]
# disable parallel compilation to further reduce binary size
codegen-units = 1
# optimize at link time to remove dead code
lto = true
# remove unneeded symbols from the elf to reduce binary size
strip = "symbols"
